# QT_txteditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwin.cpp  mainwin.hpp  ui.qrc
txt/: test.txt
ui/style/: style.qss
